10921
Can you please make an SBT project with that code and the right dependency on Slick? I can't compile that in my checkout:
```
commit 11c58a468d3041d1320c7d749dd9a29caf4564da (HEAD, origin/master, origin/HEAD, master)
Merge: 6c7d503 e2ece2f
Author: Stefan Zeiger <szeiger@novocode.com>
Date:   Wed Jan 22 07:20:55 2014 -0800

    Merge pull request #617 from slick/tmp/consistent-doc-versions

    Pass Slick version properly from sbt into Sphinx.

  ~/code/slick sbt slick/test:console
...
scala> import scala.reflect.ClassTag
import scala.reflect.ClassTag

scala> import scala.slick.ast.{TypedType}
import scala.slick.ast.TypedType

scala> import scala.slick.lifted.FlatShapeLevel
<console>:9: error: object FlatShapeLevel is not a member of package scala.slick.lifted
       import scala.slick.lifted.FlatShapeLevel
              ^

scala> import scala.slick.lifted.Shape
import scala.slick.lifted.Shape

scala> import scala.slick.collection.heterogenous._
import scala.slick.collection.heterogenous._

scala> trait Tables {
     |   implicit def stringColumnType: TypedType[String] = ???
     |   type BranchRow = HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HCons[String,HNil.type]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]
     |
     |   implicitly[Shape[_ <: FlatShapeLevel, BranchRow, BranchRow, _]]
     |   def x = implicitly[Shape[_ <: FlatShapeLevel, HCons[String,HNil.type], _, _]]
     |   val i = x
     | }
<console>:18: error: not found: type FlatShapeLevel
         def x = implicitly[Shape[_ <: FlatShapeLevel, HCons[String,HNil.type], _, _]]
                                       ^
<console>:17: error: not found: type FlatShapeLevel
         implicitly[Shape[_ <: FlatShapeLevel, BranchRow, BranchRow, _]]
                               ^
```
